--- a/index.html
+++ b/index.html
@@ -69,12 +69,18 @@
                 <h2>Gallery</h2>
                 <p>Check out our recent work</p>
                 <div class="gallery-grid">
-                    <div class="gallery-item">Image 1</div>
-                    <div class="gallery-item">Image 2</div>
-                    <div class="gallery-item">Image 3</div>
-                    <div class="gallery-item">Image 4</div>
-                    <div class="gallery-item">Image 5</div>
-                    <div class="gallery-item">Image 6</div>
+                    <div class="gallery-item"><img
+                            src="Images/images_Woman.jpeg"
+                            alt="Women's Haircut"></div>
+                    <div class="gallery-item"><img
+                            src="Images/images-Men.jpeg"
+                            alt="Men's Haircut"></div>
+                    <div class="gallery-item"><img
+                            src="Images/images2.jpeg"
+                            alt="Hair Styling"></div>
+                    <div class="gallery-item"><img
+                            src="Images/images3.jpeg"
+                            alt="Hair Treatment"></div>
                 </div>
             </div>
         </section>
