Add new HTML pages for About, Contact, Gallery, and Services sections; update navigation links and styles

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegance Hair Salon - Professional Hair Services</title>
+    <title>About Us - Elegance Hair Salon</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -29,36 +29,13 @@
 
     <!-- MAIN CONTENT -->
     <main>
-        <!-- Home Section -->
-        <section id="home" class="hero">
+        <!-- About Section -->
+        <section id="about" class="about">
             <div class="container">
-                <h2>Welcome to Elegance Hair Salon</h2>
-                <p>Your premier destination for professional hair services</p>
-                <button class="cta-button">Book Now</button>
-            </div>
-        </section>
-
-        <!-- Quick Links Icons Section -->
-        <section class="quick-links">
-            <div class="container">
-                <div class="links-grid">
-                    <a href="services.html" class="link-icon">
-                        <div class="icon">✂️</div>
-                        <h3>Services</h3>
-                    </a>
-                    <a href="gallery.html" class="link-icon">
-                        <div class="icon">🖼️</div>
-                        <h3>Gallery</h3>
-                    </a>
-                    <a href="about.html" class="link-icon">
-                        <div class="icon">ℹ️</div>
-                        <h3>About Us</h3>
-                    </a>
-                    <a href="contact.html" class="link-icon">
-                        <div class="icon">📞</div>
-                        <h3>Contact</h3>
-                    </a>
-                </div>
+                <h2>About Us</h2>
+                <p>With over 20 years of experience, Elegance Hair Salon has been serving our community with
+                    professional and friendly service. Our expert stylists are trained in the latest techniques and
+                    trends.</p>
             </div>
         </section>
     </main>
