--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegance Hair Salon - Professional Hair Services</title>
+    <title>Contact Us - Elegance Hair Salon</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -29,35 +29,23 @@
 
     <!-- MAIN CONTENT -->
     <main>
-        <!-- Home Section -->
-        <section id="home" class="hero">
+        <!-- Contact Section -->
+        <section id="contact" class="contact">
             <div class="container">
-                <h2>Welcome to Elegance Hair Salon</h2>
-                <p>Your premier destination for professional hair services</p>
-                <button class="cta-button">Book Now</button>
-            </div>
-        </section>
-
-        <!-- Quick Links Icons Section -->
-        <section class="quick-links">
-            <div class="container">
-                <div class="links-grid">
-                    <a href="services.html" class="link-icon">
-                        <div class="icon">✂️</div>
-                        <h3>Services</h3>
-                    </a>
-                    <a href="gallery.html" class="link-icon">
-                        <div class="icon">🖼️</div>
-                        <h3>Gallery</h3>
-                    </a>
-                    <a href="about.html" class="link-icon">
-                        <div class="icon">ℹ️</div>
-                        <h3>About Us</h3>
-                    </a>
-                    <a href="contact.html" class="link-icon">
-                        <div class="icon">📞</div>
-                        <h3>Contact</h3>
-                    </a>
+                <h2>Contact Us</h2>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <h3>Phone</h3>
+                        <p>(555) 123-4567</p>
+                    </div>
+                    <div class="contact-item">
+                        <h3>Email</h3>
+                        <p>info@elegancesalon.com</p>
+                    </div>
+                    <div class="contact-item">
+                        <h3>Address</h3>
+                        <p>123 Beauty Street, Your City, ST 12345</p>
+                    </div>
                 </div>
             </div>
         </section>
