--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegance Hair Salon - Professional Hair Services</title>
+    <title>Gallery - Elegance Hair Salon</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -29,35 +29,16 @@
 
     <!-- MAIN CONTENT -->
     <main>
-        <!-- Home Section -->
-        <section id="home" class="hero">
+        <!-- Gallery Section -->
+        <section id="gallery" class="gallery">
             <div class="container">
-                <h2>Welcome to Elegance Hair Salon</h2>
-                <p>Your premier destination for professional hair services</p>
-                <button class="cta-button">Book Now</button>
-            </div>
-        </section>
-
-        <!-- Quick Links Icons Section -->
-        <section class="quick-links">
-            <div class="container">
-                <div class="links-grid">
-                    <a href="services.html" class="link-icon">
-                        <div class="icon">✂️</div>
-                        <h3>Services</h3>
-                    </a>
-                    <a href="gallery.html" class="link-icon">
-                        <div class="icon">🖼️</div>
-                        <h3>Gallery</h3>
-                    </a>
-                    <a href="about.html" class="link-icon">
-                        <div class="icon">ℹ️</div>
-                        <h3>About Us</h3>
-                    </a>
-                    <a href="contact.html" class="link-icon">
-                        <div class="icon">📞</div>
-                        <h3>Contact</h3>
-                    </a>
+                <h2>Gallery</h2>
+                <p>Check out our recent work</p>
+                <div class="gallery-grid">
+                    <div class="gallery-item"><img src="Images/images_Woman.jpeg" alt="Women's Haircut"></div>
+                    <div class="gallery-item"><img src="Images/images-Men.jpeg" alt="Men's Haircut"></div>
+                    <div class="gallery-item"><img src="Images/images2.jpeg" alt="Hair Styling"></div>
+                    <div class="gallery-item"><img src="Images/images3.jpeg" alt="Hair Treatment"></div>
                 </div>
             </div>
         </section>
