--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegance Hair Salon - Professional Hair Services</title>
+    <title>Services - Elegance Hair Salon</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -29,35 +29,27 @@
 
     <!-- MAIN CONTENT -->
     <main>
-        <!-- Home Section -->
-        <section id="home" class="hero">
+        <!-- Services Section -->
+        <section id="services" class="services">
             <div class="container">
-                <h2>Welcome to Elegance Hair Salon</h2>
-                <p>Your premier destination for professional hair services</p>
-                <button class="cta-button">Book Now</button>
-            </div>
-        </section>
-
-        <!-- Quick Links Icons Section -->
-        <section class="quick-links">
-            <div class="container">
-                <div class="links-grid">
-                    <a href="services.html" class="link-icon">
-                        <div class="icon">✂️</div>
-                        <h3>Services</h3>
-                    </a>
-                    <a href="gallery.html" class="link-icon">
-                        <div class="icon">🖼️</div>
-                        <h3>Gallery</h3>
-                    </a>
-                    <a href="about.html" class="link-icon">
-                        <div class="icon">ℹ️</div>
-                        <h3>About Us</h3>
-                    </a>
-                    <a href="contact.html" class="link-icon">
-                        <div class="icon">📞</div>
-                        <h3>Contact</h3>
-                    </a>
+                <h2>Our Services</h2>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <h3>Haircut</h3>
+                        <p>Professional haircuts tailored to your style and face shape.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Hair Coloring</h3>
+                        <p>Beautiful color treatments with premium products.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Styling</h3>
+                        <p>Special occasion styling and everyday beauty solutions.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Hair Treatment</h3>
+                        <p>Nourishing treatments to keep your hair healthy and vibrant.</p>
+                    </div>
                 </div>
             </div>
         </section>
