--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,9 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>Elegance Hair Salon</h1>
+                <a href="index.html">
+                    <h1>Elegance Hair Salon</h1>
+                </a>
             </div>
             <nav class="navigation">
                 <ul>
